src/objects/Change_Order__c.object
<CustomObject>
    <description>Master Detail to the Project to summarize Change Orders.</description>
    <fields>
        <fullName>Change_Order_Amount__c</fullName>
        <label>Change Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Order_Date__c</fullName>
        <label>Change Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Order_No__c</fullName>
        <label>Change Order No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Order_Review__c</fullName>
        <label>Change Order Review</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Impact__c</fullName>
        <label>Cost Impact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Impact__c</fullName>
        <label>Schedule Impact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Change Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Change Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>